--- a/main.html
+++ b/main.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+<div class="wrapper">
+
+    <div class="imageContainer">
+        <img src="https://via.placeholder.com/1100x250" alt="Architecture Banner">
+    </div>
+
+    <table>
+        <tr>
+            <td class="col-1">
+                <img src="https://via.placeholder.com/200" alt="Architecture Image 1">
+            </td>
+
+            <td class="col-2">
+                <p>
+                    Discuss factors that are important in the design of bedrooms. Plan the
+                    size and location of closets for a typical residence. Plan a furniture
+                    arrangement for a room. Implement important design considerations
+                    for bathrooms. Plan the service area of a home by applying good design
+                    principles. Design a functional kitchen to meet a family’s needs.
+                </p>
+            </td>
+
+            <td class="col-3">
+                <img src="https://via.placeholder.com/200" alt="Architecture Image 2">
+            </td>
+        </tr>
+
+        <tr>
+            <td class="col-1">
+                <img src="https://via.placeholder.com/200" alt="Architecture Image 3">
+            </td>
+
+            <td class="col-2">
+                <p>
+                    Identify the rooms and areas that comprise the living area. Apply design
+                    principles to planning a living room area. Integrate furniture in a living
+                    room plan. Analyze a dining room using good design principles.
+                </p>
+            </td>
+
+            <td class="col-3">
+                <img src="https://via.placeholder.com/200" alt="Architecture Image 4">
+            </td>
+        </tr>
+    </table>
+
+</div>
 
 </body>
-
 </html>
